wip: integration test
